# spade

./: .flake8  .gitignore  .gitlab-ci.yml  .pipeline-common.yml  .pipeline-hpc.yml  .pipeline-mac.yml  .pipeline-win.yml  CITATION.bib  CITATION.cff  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  SConstruct  abaqus_v6.env.in  cmd_line_arguments.cpp  cmd_line_arguments.h  documentation.yml  environment-win.yml  environment.yml  find_shebang.py  h5_writer.cpp  h5_writer.h  logging.cpp  logging.h  odb_extract.cpp  odb_extract_object.cpp  odb_extract_object.h  odb_parser.cpp  odb_parser.h  output_writer.cpp  output_writer.h  package_documentation.py  pyproject.toml  pytest  pytest.scons  spade_object.cpp  spade_object.h  style  (+3 more)
.github/workflows/: pages.yml  release.yml  tests.yml
docs/: SConscript  changelog.rst  cli.rst  conf.py.in  devops.rst  external_api.rst  index.rst  installation.rst  internal_api.rst  man_index.rst  references.bib  release_philosophy.rst  targets.txt  user.rst
modulefiles/: spade-env
recipe/: conda_build_config.yaml  meta.yaml  run_test.bat  run_test.sh
recipe-internal/: conda_build_config.yaml  meta.yaml  run_test.sh
spade/: .coveragerc  SConscript  SConstruct  __init__.py  _docs.py  _extract.py  _main.py  _settings.py  _utilities.py  abaqus_v6.env.in  cmd_line_arguments.cpp  cmd_line_arguments.h  conftest.py  logging.cpp  main.py  scons_extensions.py  spade.cpp  spade_cpp.cpp  spade_object.cpp  spade_object.h
spade/tests/: SConstruct  test_docs.py  test_scons_extensions.py  test_system.py  test_systemtest.py  test_utilities.py
