[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spade"
authors = [
    {name = "Prabhu Khalsa", email = "pkhalsa@lanl.gov"},
    {name = "Kyle Brindley", email = "kbrindley@lanl.gov"},
]
description = "Tool for extracting data from an Abaqus output database (odb) file into a hierarchical data format (hdf5) file"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]
dynamic = ["version"]
dependencies = [
    "compilers",
    "hdf5",
    "numpy",
    "scons",
    "sysroot_linux-64 >=2.28",
]

[tool.setuptools]
packages =[
    "spade",
    "spade.tests"
]
zip-safe = false

[project.scripts]
spade = "spade._main:main"

[project.urls]
homepage = "https://re-git.lanl.gov/aea/python-projects/spade"
documentation = "https://aea.re-pages.lanl.gov/python-projects/spade"
repository = "https://re-git.lanl.gov/aea/python-projects/spade"
changelog = "https://aea.re-pages.lanl.gov/python-projects/spade/changelog.html"

[tool.setuptools_scm]
write_to = "spade/_version.py"

[tool.pytest.ini_options]
markers = [
    "systemtest: marks system tests, e.g. the tutorials",
    "require_third_party: marks system tests that require third-party software command line calls",
]
addopts = "--tb=long --showlocals --failed-first --strict-markers -m 'not systemtest'"

[tool.black]
target-version = ["py39", "py310", "py311", "py312", "py313"]
extend-exclude = ".txt|.toml|.yaml|.csv"
force-exclude = "build*/"
line-length = 120
include = "SConstruct|SConscript|.py"
