[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "spade"
authors = [
    {name = "Prabhu Khalsa", email = "pkhalsa@lanl.gov"},
    {name = "Kyle Brindley", email = "kbrindley@lanl.gov"},
]
description = "Tool for extracting data from an Abaqus output database (odb) file into a hierarchical data format (hdf5) file"
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]
dynamic = ["version"]
dependencies = [
    "hdf5",
    "scons",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = [".", "tests", "docs"]

[project.scripts]
spade = "spade._main:main"

[project.urls]
homepage = "https://re-git.lanl.gov/aea/python-projects/spade"
documentation = "https://aea.re-pages.lanl.gov/python-projects/spade"
repository = "https://re-git.lanl.gov/aea/python-projects/spade"
changelog = "https://aea.re-pages.lanl.gov/python-projects/spade/changelog.html"

[tool.setuptools_scm]
write_to = "spade/_version.py"

[tool.pytest.ini_options]
markers = [
    "systemtest: marks system tests, e.g. the tutorials",
    "require_third_party: marks system tests that require third-party software command line calls",
]
addopts = "--tb=long --showlocals --failed-first --strict-markers -m 'not systemtest' -ra"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["build", "install", "conda-environment", "conda-pkgs", "pip-build-test"]
extend-include = ["*SConstruct", "*SConscript", "*.scons"]

[tool.ruff.lint]
extend-select = [
    "A", "B", "D", "E", "F", "I", "N", "Q", "W",
    "ANN", "ARG", "C4", "FURB", "ERA", "ISC", "NPY", "PD", "PERF", "PGH", "PIE", "PLC", "PLE", "PLW", "PT", "PTH", "PYI",
    "RSE", "RUF", "SIM", "T10", "UP"
]
# TODO: decide how to handle *args/**kwargs type annotations and remove ignores for ANN00[23]
extend-ignore = ["B028", "D203", "D213", "PIE808", "PIE790", "SIM108", "PLC0415", "ANN002", "ANN003"]

[tool.ruff.lint.extend-per-file-ignores]
"*SConstruct" = ["F821", "D100"]
"*SConscript" = ["F821", "D100"]
"*.scons" = ["F821"]
"spade/tests/test_*.py" = ["RUF012", "D100", "D103"]
